<resources>
    <string name="app_name">simulacroExamen</string>
    <string name="balon">Balon</string>
    <string name="cantidad_de_entradas">Cantidad de entradas</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="si_descuento10_total">SI (descuento10% total)</string>
    <string name="eres_socio_del_club">¿Eres socio del club?</string>
    <string name="no_sin_descuento">NO (sin descuento)</string>
    <string name="zona_general">Zona general:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="total">Total:</string>
    <string name="_0">0</string>
    <string name="descuento_de_socio">Descuento de Socio:</string>
    <string name="precio_a_pagar">Precio a pagar:</string>
    <string name="si_10_desc">SI (10% desc)</string>
    <string name="no_no_descuento">NO (No descuento)</string>
    <string name="textview">TextView</string>
    <string name="total_a_pagar">Total a pagar</string>
    <string name="txt_zona">Zona General</string>

</resources>