<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EA9210"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="153dp"
        android:layout_height="256dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/balon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/balon" />

    <EditText
        android:id="@+id/editTextNentradas"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="62dp"
        android:autofillHints=""
        android:background="@color/white"
        android:ems="10"
        android:hint="@string/cantidad_de_entradas"
        android:inputType="number"
        android:minHeight="48dp"
        android:padding="10dp"
        android:textColor="@color/teal_700"
        android:textColorHint="#0277BD"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="211dp"
        android:layout_height="48dp"
        android:layout_marginTop="34dp"
        android:minHeight="48dp"
        android:textAlignment="gravity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNentradas"
        tools:ignore="SpeakableTextPresentCheck" />

    <Button
        android:id="@+id/Boton_Siguiente"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="272dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="26dp"
        android:onClick="siguiente"
        android:text="@string/siguiente"
        android:textColor="#FBC02D"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner"
        tools:ignore="TextContrastCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>